--- a/{{cookiecutter.library_name|slugify}}/Dockerfile
+++ b/{{cookiecutter.library_name|slugify}}/Dockerfile
@@ -16,7 +16,7 @@ ARG GID=1000
 RUN groupadd -g $GID -o $UNAME
 RUN useradd -m -u $UID -g $GID -o -s /bin/bash $UNAME
 
-COPY ./app /app
+COPY ./library /library
 
 USER $UNAME
 CMD /bin/bash
